--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" routerLink="/home"> vTender</a>
+  <a class="head-menu" routerLink="/viewcompanies"> Manage Companies</a>
   <a class="head-menu" routerLink="/register"> My Account</a>
 </nav>
 
