--- a/src/app/addtender/addtender.component.html
+++ b/src/app/addtender/addtender.component.html
@@ -3,11 +3,11 @@
 
 <div class="container">
   <div class="row">
-
      <div class="col md-12">
          <div class="jumbotron p-3">
          <h2>Manage <b>Tenders</b><button type="button" class="btn btn-success float-right" data-toggle="modal" data-target=".bd-example-modal-lg"> Add New Tender</button></h2>
-          <ul class="nav nav-tabs">
+         <h6 *ngIf="tenderAdded">New Tender Number Has Been Added</h6>
+         <ul class="nav nav-tabs">
             <li class="nav-item">
               <a class="nav-link active" data-toggle="tab" href="#tenderinfor">Tenders Information</a>
             </li>
@@ -30,19 +30,20 @@
                <th>Date Published</th>
                <th>Closing Date</th>
                <th>Status</th>
+               <th>Edit | Delete</th>
               <!-- <th></th> -->
            </tr>
 
-           <tr>
-              <td>{{tenderNumbers}}</td>
-              <td>{{tenderDescriptions}} </td>
-              <td>{{categorys}}</td>
-              <td>{{datePublisheds}}</td>
-              <td>{{closingDates}}</td>
-              <td>{{tenderStatuss}}</td>
+           <tr *ngFor="let tender of tenders">
+              <td>{{tender.tenderNumber}}</td>
+              <td>{{tender.tenderDescription}} </td>
+              <td>{{tender.category}}</td>
+              <td>{{tender.datePublished}}</td>
+              <td>{{tender.closingDate}}</td>
+              <td>{{tender.tenderStatus}}</td>
               <td>
-                <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modeledit">Edit</a>
-                <a href="" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure to delete')">Delete</a>
+                <a href="" class="btn btn-warning btn-xs" (click)="editTender(tender) " data-toggle="modal" data-target="#modaledit">Edit</a>
+                <a class="btn btn-danger btn-xs" (click)="delete(tender._id)">Delete</a>
               </td>
            </tr>
           <tbody id="tender-list">
@@ -62,11 +63,12 @@
                      <!-- <th></th> -->
                   </tr>
 
-                  <tr>
-                     <td>{{tenderNumbers}}</td>
-                     <td>Olu Ayeni</td>
-                     <td>test@olumide.com</td>
-                     <td>0104893841</td>
+                  <tr *ngFor="let tender of tenders">
+                     <td>{{tender.tenderNumber}}</td>
+                     <td>{{tender.InstitutionContactPerson}}</td>
+                     <td>{{tender.InstitutionPersonEmail}}</td>
+                     <td>{{tender.InstitutionPersonPhone}}</td>
+
 
                   </tr>
                  <tbody id="contactperson-list">
@@ -90,14 +92,10 @@
                        <!-- <th></th> -->
                     </tr>
 
-                    <tr>
-                       <td>{{tenderNumbers}}</td>
-                       <td>84.8</td>
-                       <td>Mthamba (PTY) LTD</td>
-                       <td>2009/84889/38493</td>
-                       <td>Testing Name, Another Directed, And Test</td>
-                       <td>24 Northgate Mall, Capetown</td>
-                       <td>01888888999</td>
+                    <tr *ngFor="let tender of tenders">
+                       <!-- <td>{{tenderNumbers}}</td> -->
+                       <td>{{tender.tenderNumber}}</td>
+                       <td>{{tender.awardedPoint}}</td>
 
                     </tr>
                    <tbody id="tender-list">
@@ -203,11 +201,101 @@
 
       </div>
   </div>
-<!-- END OF TENDER BLOCK-->
-  <div id="companyportal" class="form hide">
-    <form >
-      <input type="text" value="Enter Company Name"/>
-    </form>
+<!-- END OF CREATE TENDER BLOCK MODAL-->
+
+<!-- BEGINNING OF EDIT TENDER MODAL-->
+<div id="modaledit"  class="modal fade" role="dialog">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">UPDATE TENDER INFORMATION</h4>
+        <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button> -->
+      </div>
+      <div class="modal-body">
+        <form #tenderForm="ngForm" (ngSubmit)="createTender(tenderForm.value)"  autocomplete="off">
+          <div class="form-group">
+             <div class="row">
+               <div class="col">
+                <input #tenderNumber="ngModel" type="text"   class="form-control" name="tenderNumber" ngModel required>
+               <span *ngIf="tenderNumber.invalid && tenderNumber.touched" class="error">Tender number is required</span>
+              </div>
+               <div class="col">
+                <input #category="ngModel" type="text" value="etr" class="form-control" name="category" ngModel required>
+                <span *ngIf="category.invalid && category.touched" class="error">Category is required</span>
+              </div>
+              <div class="col">
+
+            <select #tenderStatus="ngModel" name="tenderStatus" value="what is here" ngModel required>
+              <span *ngIf="tenderStatus.invalid && tenderStatus.touched" class="error"> Tender status is required</span>
+              <option value="" selected disabled>Tender Status</option>
+              <option value="open">Open</option>
+              <option value="close">Close</option>
+              <option value="pending">Pending</option>
+              <option value="suspended">Suspended</option>
+            </select>
+
+              </div>
+             </div>
+          </div>
+
+          <div class="form-group">
+            <div class="row">
+              <div class="col">
+                <label>Tender Description</label>
+                <input #tenderDescription="ngModel" type="text" value="des" class="form-control" name="tenderDescription" ngModel required>
+                <span *ngIf="tenderDescription.invalid && tenderDescription.touched" class="error">Tender description is required</span>
+              </div>
+              <div class="col">
+                <label>Date Published</label>
+                <input #datePublished="ngModel" type="date" value="dat" class="form-control" name="datePublished" ngModel required>
+                <span *ngIf="datePublished.invalid && datePublished.touched" class="error">Publish date is required</span>
+              </div>
+              <div class="col">
+                <label>Closing Date</label>
+                <input #closingDate="ngModel"  type="date" value="da" class="form-control" name="closingDate" ngModel required>
+                <span *ngIf="closingDate.invalid && closingDate.touched" class="error">Closing date is required</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+
+          </div>
+
+          <div class="form-group">
+            <h4 class="modal-title">CONTACT PERSON DETAILS</h4>
+           <div class="row">
+            <div class="col">
+              <input #InstitutionContactPerson="ngModel" value="Tender" type="text" placeholder="Name"class="form-control" name="InstitutionContactPerson" ngModel required>
+              <span  *ngIf="InstitutionContactPerson.invalid && InstitutionContactPerson.touched" class="error">Name is required</span>
+            </div>
+             <div class="col">
+              <input #InstitutionPersonEmail="ngModel" value="Ins"  type="email" required placeholder="Email"  class="form-control" name="InstitutionPersonEmail" ngModel>
+              <span *ngIf="InstitutionPersonEmail.invalid && InstitutionPersonEmail.touched" class="error">Email address is required</span>
+            </div>
+             <div class="col">
+              <input #InstitutionPersonPhone="ngModel" value="In" type="number" placeholder="Institution Phone Number" class="form-control" name="InstitutionPersonPhone" ngModel required>
+              <span *ngIf="InstitutionPersonPhone.invalid && InstitutionPersonPhone.touched" class="error">Phone number is required</span>
+            </div>
+           </div>
+          </div>
+
+          <div class="form-group">
+            <input type="submit" [disabled]="!tenderForm.form.valid" class="btn btn-primary" value="Update Details">
+          </div>
+</form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
   </div>
-<!-- BEGINNING OF COMPANY BLOCK OF TENDER BLOCK-->
+</div>
+
+
+
+
+
 </div>
