--- a/src/app/addtender/addtender.component.css
+++ b/src/app/addtender/addtender.component.css
@@ -40,3 +40,10 @@ span {
 * {
   padding: 8px;
 }
+
+.btn-success {
+  color: #fff;
+  border-color: #28a745;
+  font-size: 20px;
+  font-weight: bold;
+}
