--- a/src/app/addtender/addtender.component.html
+++ b/src/app/addtender/addtender.component.html
@@ -1,5 +1,5 @@
 
-<p> Welcome <b>Username</b> <a routerLink="/addcompany">Company Update Portal</a> </p>
+<p> Welcome <b>Username</b> <a routerLink="/viewcompanies">COMPANY PORTAL</a> </p>
 
 <div class="container">
   <div class="row">
@@ -42,7 +42,7 @@
               <td>{{tender.closingDate}}</td>
               <td>{{tender.tenderStatus}}</td>
               <td>
-                <a href="" class="btn btn-warning btn-xs" (click)="editTender(tender) " data-toggle="modal" data-target="#modaledit">Edit</a>
+                <a  class="btn btn-warning btn-xs" routerLink="/edittender" [state]="{ data: tender._id }" >Update</a>
                 <a class="btn btn-danger btn-xs" (click)="delete(tender._id)">Delete</a>
               </td>
            </tr>
@@ -132,14 +132,13 @@
                       </div>
                       <div class="col">
 
-                    <select #tenderStatus="ngModel" name="tenderStatus" ngModel required>
-                      <span *ngIf="tenderStatus.invalid && tenderStatus.touched" class="error"> Tender status is required</span>
-                      <option value="" selected disabled>Tender Status</option>
-                      <option value="open">Open</option>
-                      <option value="close">Close</option>
-                      <option value="pending">Pending</option>
-                      <option value="suspended">Suspended</option>
-                    </select>
+
+                        <div class="md-form">
+                          <select placeholder="Choose your option" label="Example label" ngModel required name="tenderStatus">
+                            <option *ngFor="let option of options" [value]="option.value">{{ option.label }}</option>
+                          </select>
+                        </div>
+
 
                       </div>
                      </div>
@@ -204,7 +203,7 @@
 <!-- END OF CREATE TENDER BLOCK MODAL-->
 
 <!-- BEGINNING OF EDIT TENDER MODAL-->
-<div id="modaledit"  class="modal fade" role="dialog">
+<div id="olu"  class="modal fade" role="dialog">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
@@ -218,7 +217,7 @@
           <div class="form-group">
              <div class="row">
                <div class="col">
-                <input #tenderNumber="ngModel" type="text"   class="form-control" name="tenderNumber" ngModel required>
+                <input #tenderNumber="ngModel" type="text" value="{{tenderNumber}}" class="form-control" name="tenderNumber" ngModel required>
                <span *ngIf="tenderNumber.invalid && tenderNumber.touched" class="error">Tender number is required</span>
               </div>
                <div class="col">
